--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.5.5",
+    "css-loader": "^5.2.6",
+    "jquery": "^3.6.0",
+    "mini-css-extract-plugin": "^1.6.2",
+    "sass": "^1.35.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.0.0",
     "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
     "webpack": "^5.40.0",
